# predicting-undernutrition

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
cleaned-data/: cleaned_X.csv  cleaned_y.csv  final_tags.csv  tags.xlsx  wf.xlsx
code/: 02 Data Splitting.ipynb  03 Model Training.ipynb  03 Tmp Results.ipynb  Cross Validation - DNN Hive.ipynb  Cross Validation - DNN Naive Hive.ipynb  Preliminary Image Conversion.ipynb  chi_test.py  classify_data.py  clean_data.py  combine_tables.py  functions.py  global_variables.py  main.py  process_data.py  process_tags.py  run.bat  run_three_feat.bat  setup.bat  split_data.py  three_features.py  train_task.py  visualize_tree.py
data/: CH_HH.xlsx  RENI.xlsx  Workflow.xlsx
docs/: conf.py  index.rst
figures/: 1b_borderline_0
latex/: 1b_chitest.tex  1b_kfold.tex  1b_test_results.tex  2ai_chitest.tex  2ai_kfold.tex  2ai_test_results.tex  2aii_chitest.tex  2aii_kfold.tex  2aii_test_results.tex  2aiii_chitest.tex  2aiii_kfold.tex  2aiii_test_results.tex  2biv1_chitest.tex  2biv1_kfold.tex  2biv1_test_results.tex  2biv2_chitest.tex  2biv2_kfold.tex  2biv2_test_results.tex  2biv3_chitest.tex  2biv3_kfold.tex  2biv3_test_results.tex  2biv4_chitest.tex  2biv4_kfold.tex  2biv4_test_results.tex  3a_chitest.tex  3b_chitest.tex  3c_chitest.tex  3d_chitest.tex  all_model_results.tex  chitest_tables.tex
results/: 1b_best_params.txt  2ai_best_params.txt  2aii_best_params.txt  2aiii_best_params.txt  2biv1_best_params.txt  2biv2_best_params.txt  2biv3_best_params.txt  2biv4_best_params.txt  preliminary_dnn.csv  preliminary_dnn_adasyn.csv  preliminary_dnn_borderline.csv  preliminary_dnn_sm.csv  preliminary_nn.csv  smote_preliminary_nn.csv
tests/: conftest.py  test_functions.py  test_noerror.py  test_training.py
train-test-data/: 1b_test.csv  1b_train.csv  2ai_test.csv  2ai_train.csv  2aii_test.csv  (+19 more)
(+33 files in other folders)
