[metadata]
name = predunder
description = Predicting Undernutrition
author = Mark Ong Yiu, Carlo Pastor, Justin Tan
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    predunder
install_requires =
    numpy>=1.23.1
    pandas>=1.4.3
    openpyxl>=3.0.10
    scikit-learn>=1.1.2
    tensorflow>=2.9.1
    pytorch-tabnet>=3.1.1
    imbalanced-learn>=0.9.1
    matplotlib>=3.6.0
    Pillow>=9.2.0
    pandas-stubs>=1.4.4.220919
    xgboost>=1.7.0
    nnrf>=0.9.0
    
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=5.0.4
    tox>=3.26.0
    pytest>=7.1.3
    pytest-cov>=3.0.0
    mypy>=0.991
    Sphinx>=5.3.0
    sphinx-rtd-theme>=1.0.0

[options.package_data]
predunder = py.typed

[flake8]
max-line-length = 160
